--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI='mongodb+srv://mclain:mcl41n@fs-phonebookcluster0.gio9v.mongodb.net/interesting-blogs?retryWrites=true&w=majority'
+TEST_MONGODB_URI='mongodb+srv://mclain:mcl41n@fs-phonebookcluster0.gio9v.mongodb.net/test-interesting-blogs?retryWrites=true&w=majority'
 PORT=3001
