--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,4 @@
 MONGODB_URI='mongodb+srv://<user>:<password>@fs-phonebookcluster0.gio9v.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
 PORT=3001
+SECRET='secret-for-tokenization'
+SALT_ROUNDS=10
